@@ -1,3 +1,9 @@
+2010-06-22  Kent Tamura  <tkent@chromium.org>
+
+        Unreviewed, build fix for r61648.
+
+        * platform/graphics/GraphicsContext3D.h:
+
 2010-06-22  Vangelis Kokkevis  <vangelis@chromium.org>
 
         Reviewed by Kent Tamura.
